Add compact object headers as argument